feat: add Cardano and Mithril eras to the `/status` route
